--- a/site/index.html
+++ b/site/index.html
@@ -52,7 +52,7 @@
         <!-- Add your content here -->
         <div class="row divs" >
           <div class="col-xs-12 col-sm-6 col-md-4 div">
-            <div class="menu-item 1">
+            <div class="menu-item" id="1">
               <h1>Chicken</h1>
               <p>
                 Chicken is a common domestic bird that is a significant source of meat and eggs worldwide. It belongs to the genus Gallus of the family Phasianidae and is raised for both commercial and personal purposes. The meat of a chicken is lean and high in protein but can also be high in fat, depending on the cut. Chicken is versatile in cooking and can be grilled, fried, baked, or roasted. It is also a popular ingredient in many cuisines, such as Mexican, Indian, Chinese, and Mediterranean. Chicken eggs are used in cooking and baking and are a good source of protein.best delesious chicken
@@ -60,7 +60,7 @@
             </div>
           </div>
           <div class="col-xs-12 col-sm-6 col-md-4">
-            <div class="menu-item 2">
+            <div class="menu-item" id="2">
               <h1>Beef</h1>
               <p>
                 Beef is a popular meat that comes from cattle. It is a good source of, and vitamin B12. Beef can be prepared in a variety of ways including grilling, roasting, or simmering. It is commonly used in many dishes such as steaks, burgers, and stews. However, it is important to consume beef in moderation as it is also high in saturated fatroasting, or frying. Popular beef dishes include hamburgers, steaks, and beef stews. However, consuming too much beef may have negative health effects, such as an increased risk of heart disease. It is important to choose lean best kind of beef eveer
@@ -68,7 +68,7 @@
             </div>
           </div>
           <div class="col-xs-12 col-md-4">
-            <div class="menu-item 3">
+            <div class="menu-item" id="3">
               <h1>Sushi</h1>
               <p>
                 Sushi is a type of Japanese dish that typically consists of vinegared rice topped with raw or cooked seafood, vegetables, and other ingredients. It is often served with soy sauce, wasabi, and pickled ginger. Popular types of sushi include nigiri (small pieces of fish or other toppings pressed onto a bed of rice), maki (sushi rolls wrapped in nori seaweed), and sashimi (raw fish served without rice). Sushi is widely available in restaurants and sushi bars around the world and is enjoyed by many as a healthy and flavorful meal option.sushi greargfgy sushii
